--- a/index.html
+++ b/index.html
@@ -14,4 +14,38 @@ initial-scale=1.0"
     <h1>Weather App</h1>
     <script src="js/app.js"></script>
   </body>
+  <main class="container">
+    <!-- Search area -->
+    <div class="search-bar">
+      <input
+        type="text"
+        id="city-input"
+        placeholder="Enter city name (e.g., London)"
+        aria-label="City name"
+      />
+      <button id="search-btn" aria-label="Search">Search</button>
+    </div>
+
+    <!-- Optional: quick buttons -->
+    <div class="quick-buttons">
+      <button class="quick" data-city="New York">New York</button>
+      <button class="quick" data-city="Tokyo">Tokyo</button>
+      <button class="quick" data-city="Delhi">Delhi</button>
+    </div>
+
+    <!-- Weather display -->
+    <section class="weather-info" id="weather-info" aria-live="polite">
+      <p id="city-name">City: —</p>
+      <p id="temperature">Temperature: — °C</p>
+      <p id="weather-description">Description: —</p>
+      <p id="humidity">Humidity: — %</p>
+      <p id="wind-speed">Wind Speed: — m/s</p>
+      <p id="last-updated" class="small">Last updated: —</p>
+    </section>
+
+    <!-- Error / status message -->
+    <div id="status" class="status"></div>
+  </main>
+
+  <script src="app.js"></script>
 </html>
