Styled HTML elements using CSS for a visually appealing layout

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 initial-scale=1.0"
     />
     <title>Weather App</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Weather App</h1>
-    <script src="js/app.js"></script>
+    <script src="app.js"></script>
   </body>
   <main class="container">
     <!-- Search area -->
