Designed HTML section for 3-day weather forecast

--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@ initial-scale=1.0"
 
     <!-- Error / status message -->
     <div id="status" class="status"></div>
+
+    <div class="forecast">
+      <h2>3-Day Weather Forecast</h2>
+      <div class="forecast-days"></div>
+    </div>
+
+    <div class="day-card">
+      <div class="day-date">Monday, May 25</div>
+      <div class="day-weather-icon">
+        <img src="weather-icon.png" alt="Weather Icon" />
+      </div>
+      <div class="day-temperature">25°C</div>
+      <div class="day-description">Partly Cloudy</div>
+    </div>
   </main>
 
   <script src="app.js"></script>
